--- a/free-nodes/page-25.htm
+++ b/free-nodes/page-25.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-03-05">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-3-5-free-clash.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-3-5-free-clash.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、新加坡、欧洲、香港、加拿大、日本、韩国等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-03-04">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
@@ -187,16 +201,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-3-2-node-share.htm" title="3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-31-free-clash-subscribe.htm" title="7月31日→22.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">7月31日→22.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" title="11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-28-free-clash.htm" title="6月28日→21M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">6月28日→21M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-11-free-clash.htm" title="5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-16-free-node-subscribe.htm" title="8月16日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">8月16日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-11-free-v2ray.htm" title="6月11日→22.9M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">6月11日→22.9M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-5-free-ssr-subscribe.htm" title="5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-27-free-high-speed-nodes.htm" title="9月27日→21.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月27日→21.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-31-clash-windows.htm" title="10月31日→18.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月31日→18.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-26-clash-node-daily-updates.htm" title="6月26日→18M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">6月26日→18M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-23-node-share-links.htm" title="7月23日→20.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">7月23日→20.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-7-clash-windows.htm" title="4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月7日→18.7M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-19-clash-v2ray-ss-ssr.htm" title="5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-5-clash-windows.htm" title="6月5日→20.2M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月5日→20.2M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm" title="3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-20-free-v2ray.htm" title="6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-22-node-share-links.htm" title="4月22日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接">4月22日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-6-clash-node.htm" title="11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -208,7 +222,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
